--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     },
     "devDependencies": {
         "axios": "^1.6.4",
+        "vue-router": "^4.3.0",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0",
+        "@vitejs/plugin-vue": "5.0.4",
         "vue": "^3.4.21",
-        "@vitejs/plugin-vue": "5.0.4"
+        "vite": "^5.0"
     }
 }
